--- a/bulkV2/appsettings.json
+++ b/bulkV2/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "server=localhost;port=3306;database=v2Bulky;user=root;password=password"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
